# linkstart

./: .gitignore  README.md  config.example.yaml  pyproject.toml
src/linkstart/: __main__.py  auth.py  cli.py  config.py  cooldown.py  models.py  observability.py  orchestrator.py  retry.py  state.py  summary.py
src/linkstart/downloader/: __init__.py  _base.py  _cleanup.py  _context.py  _dual.py  _edge.py  _loop.py  _media.py  _paths.py  _process.py  _stall.py  _strategy.py  _watchdog.py
src/linkstart/notifier/: __init__.py  base.py  discord.py
tests/: conftest.py  test_auth.py  test_chzzk.py  test_cli.py  test_config.py  test_context.py  test_download_profile.py  test_downloader.py  test_media.py  test_models.py  test_notifier_discord.py  test_orchestrator.py  test_paths.py  test_platforms_base.py  test_process.py  test_recording_strategy.py  test_retry.py  test_stall.py  test_state.py  test_summary.py  test_twitcasting.py  test_watchdog.py  test_youtube.py
tests/fixtures/: chzzk_live.json  chzzk_offline.json  twitcasting_live.json  twitcasting_live_no_id.json  twitcasting_offline.json
