[project]
name = "linkstart"
version = "0.1.0"
description = "Multi-platform live stream recorder"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<3.13",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "croniter>=2.0",
    "browser-cookie3>=0.20",
]

[project.scripts]
linkstart = "linkstart.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkstart"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
